--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
             <h3>Atualmente</h3>
             <h2>Layout na Brasão Supermercados Chapecó</h2>
 
-                <h2>Objetivos e descrissão</h2>
+                <h2>Objetivos e descrição</h2>
                     
                     <p>Prazer me chamo Rafael, atuo na equipe responsável pelo layout dos produtos, na empresa Brasão&nbsp;Supermercados.<br> 
                     Já trabalhei na reposição nos setores de FLVs e Loja, entre várias outras áreas do mercado auxiliando cada uma delas,<br> 
