--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         
-        <h1><p>Rafael Lima Dalmagro</p>
+        <h1><p>Rafael Lima Dalmagro</p></h1>
             <h3>Atualmente</h3>
             <h2>Layout na Brasão Supermercados Chapecó</h2>
 
