--- a/Index.html
+++ b/Index.html
@@ -20,11 +20,9 @@
                     <p>Estou ingressando na área de programação e quero me aprofundar cada dia mais nela.</p>
                 <h2>Experiência</h2>
                     <p><strong>Brasão Supermercados:</strong>
-                            Layout
-                            dezembro de 2018 - Present (2 anos 9 meses)</p>
+                            Layout<br>Dezembro de 2018 - Present (2 anos 9 meses)</p>
                     <p><strong>Brasão Supermercados:</strong>
-                            Aprendiz
-                            agosto de 2015 - novembro de 2016 (1 ano 4 meses)</p> 
+                            Aprendiz<br>Agosto de 2015 - Novembro de 2016 (1 ano 4 meses)</p> 
         Celular&nbsp;<a href="https://web.whatsapp.com/" target="_blank">49 9 9999 5673</a> 
     </body>    
 </html>
